--- a/package.xml
+++ b/package.xml
@@ -63,6 +63,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>controller_manager_msgs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>tmc_msgs</exec_depend>
 
 
 
