--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>RRT_connect_hsr</name>
+  <name>rrt_connect_hsr</name>
   <version>0.0.0</version>
-  <description>The RRT_connect_hsr package</description>
+  <description>The rrt_connect_hsr package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/RRT_connect_hsr</url> -->
+  <!-- <url type="website">http://wiki.ros.org/rrt_connect_hsr</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
